Fixed mystic jumping on mouseover in Magento 2.3.5+

--- a/view/adminhtml/web/css/editor.less
+++ b/view/adminhtml/web/css/editor.less
@@ -2,6 +2,7 @@
     border: 1px solid #adadad;
     border-radius: 1px;
     transition: border-color 0.1s linear;
+    font-size: 1.4rem; // fix mystic jumping on mouseover
 
     &:hover {
         border-color: #878787;
